# wordle-crusher

./: Cargo.toml  Readme.md
data/: wordle-possible-solutions.txt
src/: lib.rs  main.rs  oracle.rs  solver.rs
